--- a/resources/styles.css
+++ b/resources/styles.css
@@ -99,6 +99,10 @@ header {
   color: #12296c69;
 }
 
+.navigation-icons {
+  display: none;
+}
+
 /* Page Hero */
 
 .page-hero {
@@ -342,13 +346,58 @@ footer .socials img:hover {
 }
 
 @media only screen and (max-width: 630px) {
-  .logo {
-    font-size: 0.9rem;
+  header {
+    height: 5rem;
   }
 
-  .navigation li {
-    margin-left: 1.25rem;
-    font-size: 1.125rem;
+  .navigation {
+    display: none;
+  }
+
+  .navigation-icons {
+    display: contents;
+  }
+
+  .navigation-icons ul {
+    display: flex;
+    align-items: center;
+  }
+
+  .navigation-icons li {
+    margin-left: 1.5rem;
+    font-size: 1.25rem;
+  }
+
+  .navigation-icons .material-symbols-outlined {
+    color: #12296c;
+    font-size: 2rem;
+    transition: all ease-in-out 200ms;
+  }
+
+  .navigation-icons .material-symbols-outlined:hover {
+    filter: brightness(20%);
+  }
+
+  .navigation-icons button {
+    font-size: 0.825rem;
+    padding: 0.5rem 0.75rem;
+    border-radius: 20px;
+    border-style: solid;
+    border-width: 1.5px;
+    color: #fff;
+    border-style: none;
+    font-weight: 600;
+    background-color: #027a79;
+    transition: all ease-in 200ms;
+    min-width: 4.75rem;
+  }
+
+  .navigation-icons button:hover {
+    background-color: #026262;
+  }
+
+  .navigation-icons button:active {
+    background-color: #12b8b8;
   }
 
   .page-hero {
@@ -375,18 +424,16 @@ footer .socials img:hover {
 }
 
 @media only screen and (max-width: 580px) {
+  h2 {
+    font-size: 1.5rem;
+  }
+
   header {
-    padding: 0 1.5rem;
-    height: 3.5rem;
+    padding: 0 1rem;
   }
 
-  .logo {
-    font-size: 0.8rem;
-  }
-
-  .navigation li {
+  .navigation-icons li {
     margin-left: 1rem;
-    font-size: 1rem;
   }
 
   .page-hero-message {
@@ -399,10 +446,6 @@ footer .socials img:hover {
 
   .join-us h2 {
     margin: 0.5rem;
-  }
-
-  h2 {
-    font-size: 1.5rem;
   }
 
   .about-us p {
@@ -428,17 +471,12 @@ footer .socials img:hover {
 }
 
 @media only screen and (max-width: 525px) {
-  header {
-    padding: 0 1rem;
-  }
-
   .logo {
-    font-size: 0.75rem;
+    max-width: 12rem;
   }
 
-  .navigation li {
-    font-size: 0.9rem;
-    margin-left: 0.75rem;
+  .logo h1 {
+    line-height: 1.75rem;
   }
 
   .page-hero-message {
@@ -448,16 +486,17 @@ footer .socials img:hover {
 }
 
 @media only screen and (max-width: 450px) {
-  header {
-    height: 3rem;
-  }
-
   .logo {
-    font-size: 0.6rem;
+    font-size: 0.8rem;
+    max-width: 10rem;
   }
 
-  .navigation li {
-    font-size: 0.8rem;
+  .logo h1 {
+    line-height: 1.5rem;
+  }
+
+  .navigation-icons li {
+    margin-left: 0.75rem;
   }
 
   .page-hero-message {
@@ -516,16 +555,25 @@ footer .socials img:hover {
 
 @media only screen and (max-width: 385px) {
   header {
-    padding: 0rem 0.5rem;
+    padding: 0rem 0.5rem 0rem 1rem;
   }
 
   .logo {
-    font-size: 0.5rem;
+    font-size: 0.65rem;
+    max-width: 8rem;
   }
 
-  .navigation li {
-    font-size: 0.75rem;
-    margin-left: 0.5rem;
+  .logo h1 {
+    line-height: 1.25rem;
+  }
+
+  .navigation-icons .material-symbols-outlined {
+    font-size: 1.5rem;
+  }
+
+  .navigation-icons button {
+    font-size: 0.7rem;
+    padding: 0.5rem 0.3rem;
   }
 
   .page-hero {
